@@ -38,6 +38,9 @@ import java.util.Map;
 import java.util.Properties;
 import java.util.Set;
 
+import com.cleanroommc.common.CleanroomContainer;
+import com.cleanroommc.common.MixinContainer;
+import com.cleanroommc.common.ConfigAnytimeContainer;
 import net.minecraft.util.ResourceLocation;
 import net.minecraftforge.common.ForgeVersion;
 import net.minecraftforge.common.capabilities.CapabilityManager;
@@ -46,6 +49,7 @@ import net.minecraftforge.common.crafting.CraftingHelper;
 import net.minecraftforge.fml.common.LoaderState.ModState;
 import net.minecraftforge.fml.common.ModContainer.Disableable;
 import net.minecraftforge.fml.common.ProgressManager.ProgressBar;
+import net.minecraftforge.fml.common.asm.FMLSanityChecker;
 import net.minecraftforge.fml.common.discovery.ASMDataTable;
 import net.minecraftforge.fml.common.discovery.ContainerType;
 import net.minecraftforge.fml.common.discovery.ModCandidate;
@@ -371,13 +375,16 @@ public class Loader
         mods.add(minecraft);
         // Add in the MCP mod container
         mods.add(new InjectedModContainer(mcp,new File("minecraft.jar")));
-        mods.add(new InjectedModContainer(new ConfigAnytimeContainer(), new File("minecraft.jar")));
+        mods.add(new InjectedModContainer(new CleanroomContainer(), FMLSanityChecker.fmlLocation));
+        mods.add(new InjectedModContainer(new MixinContainer(), FMLSanityChecker.fmlLocation));
+        mods.add(new InjectedModContainer(new ConfigAnytimeContainer(), FMLSanityChecker.fmlLocation));
+
         for (String cont : injectedContainers)
         {
             ModContainer mc;
             try
             {
-                mc = (ModContainer) Class.forName(cont,true,modClassLoader).newInstance();
+                mc = (ModContainer) Class.forName(cont,true,modClassLoader).getConstructor().newInstance();
             }
             catch (Exception e)
             {
@@ -432,18 +439,13 @@ public class Loader
         return discoverer;
     }
 
-    private class ModIdComparator implements Comparator<ModContainer>
-    {
-        @Override
-        public int compare(ModContainer o1, ModContainer o2)
-        {
+    private static int compareModId(ModContainer o1, ModContainer o2){
             return o1.getModId().compareTo(o2.getModId());
-        }
     }
 
     private void identifyDuplicates(List<ModContainer> mods)
     {
-        TreeMultimap<ModContainer, File> dupsearch = TreeMultimap.create(new ModIdComparator(), Ordering.arbitrary());
+        TreeMultimap<ModContainer, File> dupsearch = TreeMultimap.create(Loader::compareModId, Ordering.arbitrary());
         for (ModContainer mc : mods)
         {
             if (mc.getSource() != null)
@@ -578,7 +580,7 @@ public class Loader
         {
             if (nonMod.isFile())
             {
-                FMLLog.log.info("FML has found a non-mod file {} in your mods directory. It will now be injected into your classpath. This could severe stability issues, it should be removed if possible.", nonMod.getName());
+                FMLLog.log.info("FML has found a non-mod file {} in your mods directory. It will now be injected into your classpath.", nonMod.getName());
                 try
                 {
                     modClassLoader.addFile(nonMod);
@@ -607,6 +609,12 @@ public class Loader
         {
             if (mod.getSigningCertificate() == null)
                 FMLLog.log.debug("\t\t{}\t({}\t{})\t{}", mod.getModId(), mod.getName(), mod.getVersion(), mod.getSource().getName());
+        }
+        
+        for (ModContainer mod : getActiveModList())
+        {
+            if (mod.getMetadata() == null)
+                FMLLog.log.warn("{} missing it's ModMetadata.", mod.getModId());
         }
         if (getActiveModList().isEmpty())
         {
@@ -905,7 +913,7 @@ public class Loader
             }
         }
 
-        if (difference.size() > 0)
+        if (!difference.isEmpty())
             FMLLog.log.info("Attempting connection with missing mods {} at {}", difference, side);
         return true;
     }
